closing feature #7066 EDM: display the thumbnail in the publication preview

--- a/kmelia/kmelia-war/src/main/webapp/kmelia/jsp/styleSheets/kmelia.css
+++ b/kmelia/kmelia-war/src/main/webapp/kmelia/jsp/styleSheets/kmelia.css
@@ -904,3 +904,9 @@ a.button.refuse span {
 	text-decoration:underline;
 	clear: both;
 }
+
+#illustration img {
+  width:310px;
+  margin-bottom:1em;
+  border-radius:12px;
+}
